adduser (3.87.0) UNRELEASED; urgency=low

  * NOT RELEASED YET
  * TODO: testsuite test 8 should actually add a group
  * experimental version
  * add patches from Stephen Gran:
    * allow additional groups to be used for a new user. (mh)
    Closes: #147518, #166718, #212452, #233894, #239006, #240707, #240855
    * Fix "adduser: adduser:" output of error messages. (mh)
    * Fix error messages like "foo ", gtx( ..., whch does not produce
      output at all. (mh)
    * Honor system PATH, do not hard-code paths to sub-programs.
  * Update French (fr) program translation.
    Thanks to Thomas Huriaux. (mh) Closes: #366885
  * Update French (fr) manpage translation.
    Thanks to Nicolas François. (mh) Closes: #367380
  * Apply two small patches to deluser man page.
    Thanks to Florentin Duneau. (mh) Closes: #367213
  * Update Italian (it) program and manpage translations.
    Thanks to Luca Monducci. (mh) Closes: #370030

 -- Marc Haber <mh+debian-packages@zugschlus.de>  Sat,  3 Jun 2006 13:32:31 +0200

adduser (3.87) unstable; urgency=low

  [ Marc Haber ]
  * Update Italian (it) program and manpage translation.
    Thanks to Luca Monducci. (mh) Closes: #363100
  * Update French (fr) program translation. Thanks to Thomas Huriaux
    and Luc FROIDEFOND. (mh) Closes: #356130
  * Add Galician (gl) debconf translation.
    Thanks to Jacobo Tarrio. (mh) Closes: #361240
  * Fix mis-placed closing bracket in sub cleanup.
    Thanks to Ted Percival. (mh) Closes: #363182
  * Fix multiple issues in deluser man page.
    Thanks to J S Bygott. (mh) Closes: #362623
  * Correct wording in adduser man page.
    Thanks to Reuben Thomas. (mh) Closes: #364170

  [ Joerg Hoh ]
  * removed some unnecessary code
  * converted all calls of die() to dief(); Thanks to Stephan Gran
    <sgran@debian.org>

 -- Marc Haber <mh+debian-packages@zugschlus.de>  Wed, 26 Apr 2006 14:00:15 +0000

adduser (3.86) unstable; urgency=low

  [ Marc Haber ]